                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-06-2006 changed: Simplified the auto thumb switching for My Music in line with the other views.
 - 07-06-2006 fixed: Get Thumb option wasn't enabled for Album Information.
 - 07-06-2006 fixed: .strm files were treated as folders like playlists.
 - 07-06-2006 changed: Updated the music thumbs system to be more inline with the current system.  Will require rescanning your music in to get thumbs in the library views.
 - 07-06-2006 added: Support for avalaunch_icon.jpg for My Programs.
 - 07-06-2006 fixed: Initial focus of controls didn't take into account whether they were hidden.
 - 06-06-2006 updated: French language file
 - 06-06-2006 fixed: Startup lock was unfunctional.
 - 06-06-2006 fixed: ListItem.* didn't work in FileBrowser dialog.
 - 06-06-2006 updated: Turkish language file (Thnx to necipfazil)
 - 05-06-2006 added: [ 1501051 ] setEnabled() method, angle to button in python, thanks to Nuka1195
 - 05-06-2006 changed: redid master lock. thanks to smokehead for skin work!
 - 05-06-2006 fixed: [ 1500816 ] Playlist Thumbs
 - 05-06-2006 fixed: Incorrect fgets failed errorlog on eof.
 - 05-06-2006 changed: Settings cleanup (simplified programs + video auto-switching, removed some that are no longer necessary)
 - 05-06-2006 changed: Use Track number changed to Track Format in Rip CD settings.
 - 05-06-2006 changed: TDATA\0face008\settings.xml moved to UserData\guisettings.xml.
 - 05-06-2006 fixed: RealMedia video playback. Reverted dll.cpp in Dllloader to revision 1.42.
 - 04-06-2006 changed: single item playlists are treated as playlists (not files) when playlistasfolder is false.